# cys-lang

./: LICENSE  README.md  pyproject.toml
cys/: alt.py  generator.py  main.py  reader.py  states.py  utils.py
tests/: test_cys.py  test_hello.cy
