[tool.poetry]
name = "cys"
version = "0.0.1"
description = "C Y Semicolon - C language without {;}"
authors = ["ju-djangun <ju@djangun.com>"]
readme = "README.md"

[tool.poetry.scripts]
cys = "cys.main:app"

[tool.poetry.dependencies]
python = "^3.8"
anytree = "^2.8.0"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
